--- a/css/site.css
+++ b/css/site.css
@@ -1,9 +1,18 @@
 :root {
-    --bl-primary-color: #b8c1ec;
-    --bl-secondary-color: #232946;
-    --bl-dark-color: #121629;
-    --bl-light-color: #fffffe;
-    --bl-navbar-glow: #fffffeaf;
+  --dark-navy: #140202;
+  --navy: #2f0a0a;
+  --light-navy: #401111;
+  --lightest-navy: #542323;
+  --navy-shadow: rgba(53, 43, 43, 0.753);
+  --dark-slate: #704949;
+  --slate: #b08888;
+  --light-slate: #d1a8a8;
+  --lightest-slate: #cab9b9;
+  --white: #ffe6e6;
+  --green: #ff5757;
+
+  --font-mono: 'PT Mono';
+  --font-sans: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
 }
 
 /*--------------------------------*/
@@ -15,7 +24,6 @@ html,body {
 body {
     display: flex;
     flex-direction: column;
-    background-color: var(--bl-primary-color);
 }
 
 .content {
@@ -27,11 +35,30 @@ footer {
     flex-shrink: 0;
 }
 
-/*---- Footer Override Starts -----*/
-.footer {
-    background: var(--bl-dark-color);
-    color: var(--bl-light-color);
+h1 {
+  color: var(--lightest-slate);
 }
+
+h2, h3, h4, h5, h6 {
+    color: var(--slate);
+}  
+
+body {
+    color: var(--lightest-slate);
+    background-color: var(--dark-navy);
+    font-family: var(--font-sans);
+}
+
+.green-text{
+    color: var(--green);
+}
+
+
+.checkList {
+  list-style-type: none;
+}
+
+/*---- Footer Override Starts -----*/
 
 .socialIcons {
     color: var(--bl-primary-color);
@@ -45,135 +72,116 @@ footer {
 
 /*---- Footer Override ends -----*/
 
+.sticky-nav {
+  position: fixed;
+  width: 100%;
+}
+
+.btn {
+  color: var(--green) !important;
+  border-color: var(--green) !important;
+  font-size: 1.1em;
+}
+
+.btn:hover {
+  color: var(--green);
+  background-color:rgba(187, 75, 75, 0.123);
+  border-color: var(--green);
+}
+
+.checklist >li i{
+  color: var(--green);
+}
+
+code[class*="language-"],
+  pre[class*="language-"] {
+    white-space: pre-wrap;
+    word-break: break-all;
+    word-wrap: break-word;
+  }
+
+a {
+  text-decoration: none;
+  color: var(--lightest-slate);
+}
+
+a:hover {
+  color: var(--green);
+}
+
+.btn-portfolio{
+  padding: 10px 18px;
+}
+
 /* Icons */
 .fab {
-    transition: 0.4s;
+  transition: 0.4s;
+}
+
+.fas, .hover{
+  transition: 0.4s;
+}
+
+.fab:hover {
+  color: var(--green);
+  -moz-transform: translate(0px, -5px);
+  -ms-transform: translate(0px, -5px);
+  -o-transform: translate(0px, -5px);
+  -webkit-transform: translate(0px, -5px);
+  transform: translate(0px, -5px)
+}
+
+.fas:hover, .hover:hover {
+  color: var(--green);
+  -moz-transform: translate(0px, -5px);
+  -ms-transform: translate(0px, -5px);
+  -o-transform: translate(0px, -5px);
+  -webkit-transform: translate(0px, -5px);
+  transform: translate(0px, -5px)
+}
+
+.icon {
+  font-size: 1.3em; 
+  color: #b08888;
+}
+
+  .test {
+    background-color: var(--white);
   }
-  
-  .fas, .hover{
-    transition: 0.4s;
+
+  input:focus {
+    box-shadow: none !important;
   }
-  
-  .fab:hover {
+
+  .btn:focus {
+    box-shadow: none !important;
+  }
+
+  /* Table */
+  table, th, td {
+    border: 1px solid var(--dark-navy);
     color: var(--green);
-    -moz-transform: translate(0px, -5px);
-    -ms-transform: translate(0px, -5px);
-    -o-transform: translate(0px, -5px);
-    -webkit-transform: translate(0px, -5px);
-    transform: translate(0px, -5px)
+    font-size: 1.1em;
+    font-weight: 200;
   }
-  
-  .fas:hover, .hover:hover {
-    color: var(--green);
-    -moz-transform: translate(0px, -5px);
-    -ms-transform: translate(0px, -5px);
-    -o-transform: translate(0px, -5px);
-    -webkit-transform: translate(0px, -5px);
-    transform: translate(0px, -5px)
+
+  tr:nth-child(odd) {
+    background-color: var(--dark-navy);
   }
-  
-  .icon {
-    font-size: 1.3em; 
-    color: #b0a388;
+
+  tr:nth-child(even) {
+    background-color: var(--navy-shadow);
   }
-  
-    .test {
-      background-color: var(--white);
+
+  .even {
+    font-weight: 800;
+  }
+
+  /* Footer */
+
+  /* Medium Devices, Desktops */
+  @media only screen and (min-width : 992px) {
+    .side-border{
+      border-right: solid 2px white;
     }
-  
-    input:focus {
-      box-shadow: none !important;
-    }
-  
-    .btn:focus {
-      box-shadow: none !important;
-    }
-  
-
-.appLogo {
-    max-width: 600px;
-}
-
-
-/*---- Nav Bar Override Starts ---- */
-#mainNav {
-    background-color: var(--bl-dark-color);
-}
-
-#mainNav button {
-    border-color: var(--bl-primary-color);
-}
-
-.navbar-toggler {
-    color: var(--bl-navbar-glow);
-}
-
-.navbar-toggler-icon-bl {
-    color: var(--bl-primary-color);
-    font-size: 1.5rem;
-}
-
-/*---- Nav Bar Override Ends ---- */
-.checkList {
-    list-style-type: none;
-}
-
-.checkList>li i {
-    color: var(--bl-secondary-color);
-}
-
-
-.devIcons {
-    color: var(--bl-secondary-color);
-    font-size: 3rem;
-    padding-left: .3rem;
-}
-
-/*------- Button style override starts ---------*/
-.btn-outline-primary {
-    color: var(--bl-dark-color);
-    border-color: var(--bl-secondary-color) !important;
   }
-
-  .btn-outline-primary:hover,
-.btn-outline-primary:active,
-.btn-outline-primary:focus {
-  border-color: var(--bl-highlight-color);
-  background-color: var(--bl-secondary-color);
-}
-
-.btn-primary {
-    color: var(--bl-light-color);
-    background-color: var(--bl-secondary-color);
-    border-color: var(--bl-secondary-color);
-    
-  }
-  
-  .btn-secondary {
-    color: var(--bl-light-color);
-    background-color: #55423d;
-    border-color: #55423d;
-    
-  }
-  
-  .btn-secondary:hover {
-    filter: brightness(1.1) !important;
-    background-color: #a15656;
-    border-color: #ffc0ad;
-  }
-  
-  .btn-primary:hover {
-    filter: brightness(1.1) !important;
-    background-color: var(--bl-primary-color);
-    border-color: var(--bl-highlight-color);
-  }
-  
-  .btn-primary:visited,
-  .btn-primary:active,
-  .btn-primary:focus {
-    filter: brightness(1.1) !important;
-    border-color: var(--bl-primary-color);
-  }
-  
-  
-  /*---------- button style override ends -------------*/
